buildscript {
    // needed so flyway can connect to postgres database
    dependencies {
        classpath "org.postgresql:postgresql:42.7.11"
        classpath 'org.flywaydb:flyway-database-postgresql:12.8.1'
    }
}
plugins {
    id 'java'
    id 'jacoco'
    id 'java-test-fixtures'
    id 'org.springframework.boot' version '4.0.6'
    id "io.spring.dependency-management" version '1.1.7'
    id 'org.flywaydb.flyway' version '12.8.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

static def loadEnv(File file) {
    if (!file.exists()) {
        return [:]
    }
    file.readLines().findAll {
        it && !it.startsWith('#')
    }.collectEntries {
        def (key, value) = it.split('=', 2)
        [(key): value]
    }
}
def env = loadEnv(file('.env')) + System.getenv()

flyway {
    url = "jdbc:postgresql://localhost:5432/${env.DB_NAME}"
    user = env.DB_USER
    password = env.DB_PASSWORD
    cleanDisabled = false
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation(libs.spring.boot.starter.web)
    implementation(libs.spring.boot.starter.actuator)
    implementation(libs.spring.boot.starter.validation)
    implementation(libs.spring.boot.starter.data.jpa)
    implementation(libs.spring.boot.starter.flyway)

    implementation(libs.springdoc.starter.webmvc.ui)

    runtimeOnly(libs.flyway.postgresql)
    runtimeOnly(libs.postgresql)

    testImplementation(platform(libs.junit.bom))
    testImplementation(libs.junit.jupiter)
    testRuntimeOnly(libs.junit.platform.launcher)

    testImplementation(libs.assertj.core)

    testImplementation(platform(libs.mockito.bom))
    testImplementation(libs.mockito.junit.jupiter)

    testFixturesCompileOnly(libs.logback.classic)
}

testing {
    suites {
        integrationTest(JvmTestSuite) {
            dependencies {
                implementation 'org.springframework.boot:spring-boot-starter-test'
            }
        }
    }
}

tasks.withType(Test).configureEach {
    outputs.upToDateWhen { false }
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

jacocoTestReport {
    executionData(
            layout.buildDirectory.file("jacoco/test.exec"),
            layout.buildDirectory.file("jacoco/integrationTest.exec")
    )
    reports {
        xml.required.set(true)
        html.required.set(true)
    }
}
